# rsclip

./: Cargo.toml  LICENSE.mit  README.md
src/: arguments.rs  clipboard.rs  main.rs
