[package]
name = "rsclip"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["ranicocs"]
license = "MIT"
repository = "https://github.com/ranicocs/rsclip"
keywords = ["cli", "rust", "clipboard"]
categories = ["command-line-utilities"]
description = "CLI utility to copy the contents of a file to the clipboard written in Rust"



[profile.release]
opt-level = "z"  
lto = true       
codegen-units = 1 
panic = "abort"

[profile.dev]
opt-level = 0
debug = true


[dependencies]
copypasta-ext = "0.4.4"

